--- a/springboot-basics/src/main/resources/application.properties
+++ b/springboot-basics/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 server.port=8081
-spring.h2.console.enabled=true
+
+#Connection For Mysql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring?allowPublicKeyRetrieval=true&useSSL=false
+#spring.jpa.show-sql = true
+#spring.datasource.username = root
+#spring.datasource.password=admin
+##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.h2.console.enabled=false
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
