--- a/springboot-basics/src/main/resources/application.properties
+++ b/springboot-basics/src/main/resources/application.properties
@@ -9,10 +9,12 @@ server.port=8081
 ##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-spring.h2.console.enabled=false
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#http://localhost:8081/h2-console/
 
